[package]
name = "api_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
env_logger = "0.9.0"
log = "0.4.16"
    serde = { version = "1.0", features = ["derive"] }
uuid = { version = "0.8", features = ["v4"] }
tokio = "1.17.0"
